<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/layout_main_headers"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:gravity="center"
        android:paddingHorizontal="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/layout_main_btns">

        <TextView
            android:id="@+id/tv_main_big_o"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/big_o"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="26sp"
            android:textStyle="bold"
            android:layout_marginEnd="6dp"
            />

        <TextView
            android:id="@+id/tv_main_notation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/notation"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="26sp"
            android:textStyle="bold"
            android:layout_marginStart="6dp"
            />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_main_btns"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layout_main_headers">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textColor="@color/colorPrimary"
            android:textSize="16sp"
            android:text="@string/sub_header_text"/>

        <Button
            android:id="@+id/btn_main_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/time_complexity"
            style="@style/btnMain"/>

        <Button
            android:id="@+id/btn_main_space"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/space_complexity"
            style="@style/btnMain"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>