<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:padding="16dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:id="@+id/tv_settings_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="2dp"
            android:textSize="24sp"
            android:textStyle="bold"
            android:text="@string/settings"/>

        <TextView
            android:id="@+id/tv_settings_size"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:textSize="14sp"
            android:text="@string/size"/>

        <com.google.android.material.slider.Slider
            android:id="@+id/slider_settings_size"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:trackColor="@color/colorPrimary"
            app:tickColor="@color/colorPrimary"
            app:thumbColor="@color/colorPrimaryDark"
            app:haloColor="@color/colorPrimaryDark"
            android:keepScreenOn="true"
            android:valueFrom="16.0"
            android:valueTo="512.0"
            android:stepSize="1"/>

        <TextView
            android:id="@+id/tv_settings_speed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:padding="2dp"
            android:textSize="14sp"
            android:text="@string/speed_ms"/>

        <com.google.android.material.slider.Slider
            android:id="@+id/slider_settings_speed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:trackColor="@color/colorPrimary"
            app:tickColor="@color/colorPrimary"
            app:thumbColor="@color/colorPrimaryDark"
            app:haloColor="@color/colorPrimaryDark"
            android:keepScreenOn="true"
            android:valueFrom="2.0"
            android:valueTo="1000.0"
            android:stepSize="1"/>

    </LinearLayout>

</RelativeLayout>